# guidelines

./: .gitignore  CMakeLists.txt  README.md
src/test/: CMakeLists.txt  TSDPointClusterTestEvaluationIndexCalculation.cpp  TSDPointClusterTestEvaluationIndexCalculation.h  TSDPointClusterTestEvaluationIndexCalculationExport.h  TSDPointClusterTestEvaluationIndexCalculationTest.cpp  design_pattern_abstract_factory.cpp  design_pattern_adapter.cpp  design_pattern_adapter_multiple_inheritance.cpp  design_pattern_bridge.cpp  design_pattern_builder.cpp  design_pattern_chain_of_responsibility.cpp  design_pattern_command.cpp  design_pattern_composite.cpp  design_pattern_decorator.cpp  design_pattern_facade.cpp  design_pattern_factory_method.cpp  design_pattern_flyweight.cpp  design_pattern_iterator.cpp  design_pattern_mediator.cpp  design_pattern_memento.cpp  design_pattern_observer.cpp  design_pattern_prototype.cpp  design_pattern_proxy.cpp  design_pattern_singleton.cpp  design_pattern_singleton_thread_safe.cpp  design_pattern_state.cpp  design_pattern_strategy.cpp  design_pattern_templatemethod.cpp  design_pattern_visitor.cpp  dlg_dbghelp.cpp  dlg_dbghelp.h  dlg_dbghelp.ui  dlg_encryption.cpp  dlg_encryption.h  dlg_encryption.ui  dlg_iterator.cpp  dlg_iterator.h  dlg_iterator.ui  dlg_qcombobox.cpp  dlg_qcombobox.h  (+119 more)
src/test/csharp/: .gitignore  Sample.sln
src/test/csharp/Sample/: MainWindow.xaml  MainWindow.xaml.cs  Sample.csproj  UIBridge.cs
src/test/csharp/Sample/Properties/: AssemblyInfo.cs
